<resources xmlns:android="http://schemas.android.com/apk/res/android">
    <string name="app_name">速普商城</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">设置</string>
    <string name="title_activity_welcome">速普商城</string>
    <string name="bottom_index">首  页</string>
    <string name="bottom_category">分  类</string>
    <string name="bottom_shopcar">购物车</string>
    <string name="bottom_vip">会员中心</string>
    <string name="bottom_more">更  多</string>
    <string name="search">搜索</string>
    <string name="barcode">条形码</string>
    <string name="index_gallery">首页Gallery</string>
    <string name="index_baby">点击进入孕婴宝典</string>
    <string name="index_specialprice">今日特价</string>
    <string name="index_newgoods">新品上架</string>
    <string name="index_valuebox">超值推荐</string>
    <string name="index_hotgoods">热卖商品</string>
	<string name="login_name">用户名：</string>
	<string name="login_name_editText">请输入用户名</string>
	<string name="login_password"> 密  码：</string>
	<string name="login_password_editText">请输入密码</string>
	<string name="regist_password">确认密码：</string>
	<string name="regist_password_editText">请确认密码</string>
	<string name="regist_email"> 邮  箱：</string>
	<string name="regist_email_editText">请输入邮箱</string>
	<string name="regist_recommended">推荐人：</string>
	<string name="regist_recommended_editText">请输入推荐人</string>
	<string name="regist_childbirth">宝宝生日：点击选择</string>
	<string name="regist_childbirth_editText">请输入预产期</string>
	<string name="login_button">登   录</string>
	<string name="regist_button">注  册</string>
	<string name="ticketlist_addticketBtn">使用优惠券</string>
	<string name="ticketlist_usedBtn">已使用</string>
	<string name="ticketlist_unusedBtn">未使用</string>
	<string name="ticketlist_textview">您还没有已使用的优惠券！</string>
	<string name="ticketlist_textview_unused">没有未使用的优惠券！</string>
	<string name="ticketlist_item_name">优惠券名称：</string>
	<string name="ticketlist_item_no">编号：</string>
	<string name="ticketlist_item_status">状态：</string>
	<string name="ticketinfo_name">优惠券名称：</string>
	<string name="ticketinfo_ticketNo">优惠券编号：</string>
	<string name="ticketinfo_describe">优惠内容：</string>
	<string name="ticketinfo_beginTime">生效时间：</string>
	<string name="ticketinfo_endTime">截至时间：</string>
	<string name="ticketinfo_state">本活动最终解释权归青岛速普商城有限公司所有</string>
	<string name="shopcar_subtotal">小计</string>
	<string name="shopcar_count">（1件）：</string>
	<string name="shopcar_discountAmount">优惠金额：</string>
	<string name="shopcar_item_goodsName">贝贝爱 婴儿普通纸尿片20片(绿色)</string>
	<string name="shopcar_item_gift">赠品</string>
	<string name="shopcar_item_connector">  x  </string>
	<string name="goodsdetails_goodsSn">商品编号：</string>
	<string name="goodsdetails_marketPrice">市场价：</string>
	<string name="goodsdetails_saveMoney">为您节省：</string>
	<string name="goodsdetails_shopPrice">速普价：</string>
	<string name="goodsdetails_collect_btn">收藏</string>
	<string name="goodsdetails_addShopCart">加入购物车</string>
	<string name="pay_text1">尊敬的客户：</string>
	<string name="pay_text2">，感谢您购买速普商城的商品，您所下的订单</string>
	<string name="pay_text3">已经成功提交。当前您选择的使用支付宝进行支付操作，请按下下一步完成支付。成功付款后，货品会在3-5个工作日内送达，请注意查收。祝您购物愉快！</string>
  <string name="app_picker_name">Applications</string>
  <string name="bookmark_picker_name">Bookmarks</string>
  <string name="button_add_calendar">Add to calendar</string>
  <string name="button_add_contact">Add contact</string>
  <string name="button_back">Back</string>
  <string name="button_book_search">Book Search</string>
  <string name="button_cancel">Cancel</string>
  <string name="button_clipboard_empty">Clipboard empty</string>
  <string name="button_custom_product_search">Custom search</string>
  <string name="button_dial">Dial number</string>
  <string name="button_done">Done</string>
  <string name="button_email">Send email</string>
  <string name="button_get_directions">Get directions</string>
  <string name="button_google_shopper">确定</string>
  <string name="button_mms">Send MMS</string>
  <string name="button_ok">OK</string>
  <string name="button_open_browser">Open browser</string>
  <string name="button_product_search">Product Search</string>
  <string name="button_search_book_contents">Search contents</string>
  <string name="button_share_app">Application</string>
  <string name="button_share_bookmark">Bookmark</string>
  <string name="button_share_by_email">Share via email</string>
  <string name="button_share_by_sms">Share via SMS</string>
  <string name="button_share_clipboard">Clipboard</string>
  <string name="button_share_contact">Contact</string>
  <string name="button_show_map">Show map</string>
  <string name="button_sms">Send SMS</string>
  <string name="button_web_search">Web search</string>
  <string name="button_wifi">Connect to Network</string>
  <string name="contents_contact">Contact info</string>
  <string name="contents_email">Email address</string>
  <string name="contents_location">Geographic coordinates</string>
  <string name="contents_phone">Phone number</string>
  <string name="contents_sms">SMS address</string>
  <string name="contents_text">Plain text</string>
  <string name="history_clear_text">Clear history</string>
  <string name="history_clear_one_history_text">Clear</string>
  <string name="history_email_title">Barcode Scanner history</string>
  <string name="history_empty">空</string>
  <string name="history_empty_detail">还没有扫描记录</string>
  <string name="history_send">Send history</string>
  <string name="history_title">History</string>
  <string name="menu_about">About</string>
  <string name="menu_encode_mecard">Use MECARD</string>
  <string name="menu_encode_vcard">Use vCard</string>
  <string name="menu_help">Help</string>
  <string name="menu_history">历史记录</string>
  <string name="menu_share">Share</string>
  <string name="msg_about">The official Android app of the open source ZXing barcode project.</string>
  <string name="msg_bulk_mode_scanned">Bulk mode: barcode scanned and saved</string>
  <string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the device.</string>
  <string name="msg_default_format">Format</string>
  <string name="msg_default_meta">Metadata</string>
  <string name="msg_default_mms_subject">Hi</string>
  <string name="msg_default_status">将二级码放到中间进行扫描。</string>
  <string name="msg_default_time">Time</string>
  <string name="msg_default_type">Type</string>
  <string name="msg_encode_contents_failed">Could not encode a barcode from the data provided.</string>
  <string name="msg_google_books">Google Books</string>
  <string name="msg_google_product">Google Product Search</string>
  <string name="msg_google_shopper_missing">Google Shopper is not installed</string>
  <string name="msg_install_google_shopper">Google Shopper combines barcode scanning with online and local prices, reviews and more without opening the browser. Would you like to try it?</string>
  <string name="msg_intent_failed">Sorry, the requested application could not be launched. The barcode contents may be invalid.</string>
  <string name="msg_redirect">Redirect</string>
  <string name="msg_sbc_book_not_searchable">Sorry, this book is not searchable.</string>
  <string name="msg_sbc_failed">Sorry, the search encountered a problem.</string>
  <string name="msg_sbc_no_page_returned">No page returned</string>
  <string name="msg_sbc_page">Page</string>
  <string name="msg_sbc_searching_book">Searching book\u2026</string>
  <string name="msg_sbc_snippet_unavailable">Snippet not available</string>
  <string name="msg_sbc_unknown_page">Unknown page</string>
  <string name="msg_share_explanation">You can share data by displaying a barcode on your screen and scanning it with another phone.</string>
  <string name="msg_share_subject_line">Here are the contents of a barcode I scanned</string>
  <string name="msg_share_text">Or type some text and press Enter</string>
  <string name="msg_sure">Are you sure?</string>
  <string name="msg_unmount_usb">Sorry, the SD card is not accessible.</string>
  <string name="preferences_actions_title">When a barcode is found\u2026</string>
  <string name="preferences_bulk_mode_summary">Scan and save many barcodes continuously</string>
  <string name="preferences_bulk_mode_title">Bulk scan mode</string>
  <string name="preferences_copy_to_clipboard_title">Copy to clipboard</string>
  <string name="preferences_custom_product_search_summary" formatted="false">Substitutions: %s = contents, %f = format, %t = type</string>
  <string name="preferences_custom_product_search_title">Custom search URL</string>
  <string name="preferences_decode_1D_title">一维码</string>
  <string name="preferences_decode_Data_Matrix_title">二维码</string>
  <string name="preferences_decode_QR_title">二维条码</string>
  <string name="preferences_front_light_summary">Improves scanning in low light on some phones, but may cause glare. Does not work on all phones.</string>
  <string name="preferences_front_light_title">Use front light</string>
  <string name="preferences_general_title">General settings</string>
  <string name="preferences_name">设置</string>
  <string name="preferences_play_beep_title">Beep</string>
  <string name="preferences_remember_duplicates_summary">Store multiple scans of the same barcode in History</string>
  <string name="preferences_remember_duplicates_title">Remember duplicates</string>
  <string name="preferences_reverse_image_summary">Enable on devices with a front camera only</string>
  <string name="preferences_reverse_image_title">Reversed camera image</string>
  <string name="preferences_result_title">Result settings</string>
  <string name="preferences_scanning_title">扫描的类型...</string>
  <string name="preferences_search_country">Search country</string>
  <string name="preferences_supplemental_summary">Try to retrieve more information about the barcode contents</string>
  <string name="preferences_supplemental_title">Retrieve more info</string>
  <string name="preferences_vibrate_title">Vibrate</string>
  <string name="result_address_book">Found contact info</string>
  <string name="result_calendar">Found calendar event</string>
  <string name="result_email_address">Found email address</string>
  <string name="result_geo">Found geographic coordinates</string>
  <string name="result_isbn">Found book</string>
  <string name="result_product">Found product</string>
  <string name="result_sms">Found SMS address</string>
  <string name="result_tel">Found phone number</string>
  <string name="result_text">Found plain text</string>
  <string name="result_uri">Found URL</string>
  <string name="result_wifi">Found WLAN Configuration</string>
  <string name="sbc_name">Google Book Search</string>
  <string name="share_name">Share via barcode</string>
  <string name="title_about">Barcode Scanner v</string>
  <string name="wifi_changing_network">Requesting connection to network\u2026</string>
  <string name="wifi_ssid_label">Network Name</string>
  <string name="wifi_type_label">Type</string>
  <string name="zxing_url">http://code.google.com/p/zxing</string>
  <string name="activity_remote_service_binding">AppDemo4</string>
  <string name="remote_call_failed">Failure calling remote service</string>
  <string name="partnerHint">"partner"</string>
  <string name="sellerHint">"seller"</string>
  <string name="out_trade_noHint">"out_trade_no"</string>
  <string name="subjectHint">"subject"</string>
  <string name="bodyHint">"body"</string>
  <string name="total_feeHint">"total_fee"</string>
  <string name="notify_urlHint">"notify_url"</string>
  <string name="charsetHint">"charset"</string>
  <string name="signTypeHint">"signType"</string>
  <string name="confirm_install_hint">"安装提示"</string>
  <string name="confirm_install">"为保证您的交易安全，需要您安装支付宝安全支付服务，才能进行付款。\n\n点击确定，立即安装。"</string>
  <string name="Ensure">"确定"</string>
  <string name="Cancel">"取消"</string>
  <string name="check_sign_failed">您的订单信息已被非法篡改。</string>
</resources>