<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@anim/shopcart_item_bg"
    android:paddingTop="10dip"
    android:paddingBottom="10dip"
    android:orientation="vertical" >
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dip"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/arrow"
        android:orientation="vertical">
    
		<LinearLayout 
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal">
		    
		    <TextView 
		        style="@style/ticketlist_item_text"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/ticketlist_item_name"/>
		    
		    <TextView 
		        android:id="@+id/ticketlist_item_name"
		        style="@style/ticketlist_item_text"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"/>
		    
		</LinearLayout>
		
		<LinearLayout 
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="5dip"
		    android:orientation="horizontal">
		    
		    <TextView 
		        style="@style/ticketlist_item_text"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/ticketlist_item_no"/>
		    
		    <TextView 
		        android:id="@+id/ticketlist_item_no"
		        style="@style/ticketlist_item_text"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"/>
		    
		</LinearLayout>
		
		<LinearLayout 
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="5dip"
		    android:orientation="horizontal">
		    
		    <TextView 
		        style="@style/ticketlist_item_text"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/ticketlist_item_status"/>
		    
		    <TextView 
		        android:id="@+id/ticketlist_item_status"
		        style="@style/ticketlist_item_text"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textColor="#D50205"/>
		    
		</LinearLayout>
    </LinearLayout>
    
    <ImageView 
        android:id="@+id/arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="15dip"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:background="@drawable/arrow"/>
</RelativeLayout>